src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;


:root {
  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: light dark;
  color: rgba(255, 255, 255, 0.87);
  background-color: white;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}


@keyframes draw {
  from {
    stroke-dasharray: 0 120;
    stroke-dashoffset: 0;
  }
  to {
    stroke-dasharray: 120 0;
    stroke-dashoffset: 0;
  }
}

.animate-draw .path {
  stroke-dasharray: 120;
  stroke-dashoffset: 120;
  animation: draw 2s ease forwards;
}


/* index.css or App.css */

.scroll-snap-container {
  scroll-snap-type: y mandatory; /* Snap to vertical sections */
 
}

.scroll-snap-container > * {
  scroll-snap-align: start; /* Snap to the start of each section */
}



html {
  scroll-behavior: smooth; /* Smooth scrolling */
}



body {
  margin: 0;
  padding: 0;
  place-items: center;
 
  
}

h1 {
  font-size: 3.2em;
  line-height: 1.1;
}

